# mctstest

./: CMakeLists.txt  README.md  make_release.bat
src/: Game.h  GameXO.cpp  GameXO.h  GameXO_4x4x4.cpp  GameXO_4x4x4.h  GameXO_5.cpp  GameXO_5.h  Player.h  PlayerAB.cpp  PlayerAB.h  PlayerMCTS.cpp  PlayerMCTS.h  PlayerMinimax.cpp  PlayerMinimax.h  Sandbox.cpp  Sandbox.h  Tournament.cpp  Tournament.h  Utils.cpp  Utils.h  main.cpp
